--- a/trusty/Dockerfile
+++ b/trusty/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     devscripts \
     equivs \
     git \
+    openssh-client \
     && rm -rf /var/lib/apt/lists/*
 
 # these are needing when using the image, not right now
