--- a/trusty/Dockerfile
+++ b/trusty/Dockerfile
@@ -9,6 +9,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     devscripts \
+    dput \
     equivs \
     git \
     openssh-client \
