--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,8 +1,14 @@
-FROM debian:jessie
+ARG DIST
+FROM ubuntu:${DIST}
+
+# this needs to be repeated, the FROM wipes the environment variables
+ARG DIST
 
 MAINTAINER Lachlan Toohey <l.toohey@acfr.usyd.edu.au>
 
 ENV DEBIAN_FRONTEND noninteractive
+
+RUN sed -i "s/archive.ubuntu.com/mirror.aarnet.edu.au/" /etc/apt/sources.list
 
 # get the packages first
 # this is the bare minimum to get the project to run
@@ -10,14 +16,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     devscripts \
     dput \
-    equivs \
     git \
     openssh-client \
     && rm -rf /var/lib/apt/lists/*
 
-# for later usage add in contrib and non-free
-RUN sed -i "s/jessie main/jessie main contrib non-free/" /etc/apt/sources.list
-
 # these are needing when using the image, not right now
 COPY acfrmarine-archive-keyring.gpg /etc/apt/trusted.gpg.d/
-COPY acfr-marine-jessie.list /etc/apt/sources.list.d/
+COPY acfr-marine.list /etc/apt/sources.list.d/
+
+RUN ["/bin/bash", "-c", "sed -i \"s/REPO/$DIST/\" /etc/apt/sources.list.d/acfr-marine.list"]
